# wol-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  computers.yml
.github/workflows/: docker.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  DeviceContext.tsx  api.ts  main.tsx
frontend/src/components/: AddDevice.tsx  DeviceCard.tsx
src/: list.rs  main.rs  wol.rs
