[package]
name = "wol-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.2.1"
actix-files = "0.6.2"
serde_yaml = "^0.9.14"
serde = {version = "^1.0.147", features = ['derive']}
uuid = {version = "^1.2.1", features = ['v4', 'fast-rng']}
